# curtail-llm

./: .gitignore  Dockerfile  GEMINI.md  NANOCHAT_INTEGRATION.md  README.md  cleanup.sh  energy_simulation.py  exalsius-deployment.md  federation-derms.yaml  mci.csv  nanochat_train.py  pyproject.toml  recover_wandb_logs.py  setup_test_node.sh  timing_analysis.md  vessim-deployment.yaml  vessim.Dockerfile
.github/workflows/: docker-ghcr.yml
analysis/: centalized_baseline.csv  loss_plot.py  notebook.py  pilot_baseline.csv  timing_analysis.md
evaluation/: energy_simulation.py
evaluation/results/exp1/: client_0.csv  client_1.csv  events.csv
medAlpaca-main/medalpaca/: inferer.py  train.py
nanochat/: common.py  dataset.py  gpt.py
pilot/: __init__.py  client_app.py  data.py  event_log.py  llm.py  logger.py  medical.py  medical_datasets.py  model.py  models.py  nanochat_fl.py  provisioner.py  server_app.py  strategy.py  task.py  train_test.py  vision.py  wandb_logs.py
pilot/nanochat/: __init__.py  checkpoint_manager.py  dataloader.py  dataset.py  engine.py  gpt.py  tokenizer.py
pilot/prompt_templates/: medalpaca.json
result/: baseline_1_client.csv  baseline_2_clients.csv  client_0.csv  client_1.csv  client_2.csv
result/exp1/: client_2.csv
scripts/: base_eval.py  base_train.py  tok_train.py
tests/: test_training.py
