[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilot"
version = "0.1.0"
description = "Pilot project"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "ray>=2.0.0",
    "pandas>=2.1.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm",
    "transformers",
    "peft",
    "trl",
    "wandb",

    # medAlpaca dependencies
    "accelerate",
    "appdirs",
    "datasets",
    "fire",
    "gradio",
    "sentencepiece",
    # "bitsandbytes",  # only required for 4-bit or 8-bit quantization
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pilot.server_app:app"
clientapp = "pilot.client_app:app"

[tool.flwr.app.config]
wandb_enabled = true
wandb_project = "pilot_flwr"
# wandb_entity = ""  # Optional wandb username / team name
# server_debug_port = 5681
# client_debug_port = 5682

# ===== Vision Task (Image Classification) =====
#task_type = "vision"
#model_type = "efficientnet_b0"
#dataset_name = "uoft-cs/cifar10"
#num_shards = 5
#num_rounds = 100
#lr = 0.001
#weight_decay = 0.01
#batch_size = 128

# ===== LLM Task (Text Generation with LoRA) =====
task_type = "llm"  # Optional - auto-detected from model_type
model_type = "Qwen/Qwen2.5-7B"
dataset_name = "HuggingFaceH4/ultrachat_200k"
num_shards = 5
num_rounds = 50
lr = 0.0001  # Lower LR for LLMs
weight_decay = 0.01
batch_size = 4  # Smaller batch for LLMs
max_length = 512  # Max sequence length
gradient_accumulation_steps = 4  # Effective batch = 4 * 4 = 16


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 3
options.backend.client-resources.num-gpus = 1
options.backend.client-resources.num-cpus = 8

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
