[build-system]
requires = ["hatchling", "maturin>=1.7,<2.0"]
build-backend = "hatchling.build"

[project]
name = "pilot"
version = "0.1.0"
description = "Pilot project"
requires-python = ">=3.12"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "ray>=2.0.0",
    "pandas>=2.1.0",
    "torch>=2.9.0",
    "tqdm",
    "transformers>=4.57.3",
    "wandb",
    "redis>=5.0.0",
    "exalsius-api-client @ git+https://github.com/exalsius/exalsius-api-spec.git#subdirectory=client-sdk",
    "vessim[sil]>=0.13.1",
    # Utilities
    "accelerate",
    "appdirs",
    "datasets",
    "fire",
    # Nanochat dependencies
    "filelock",
    "pyarrow",
    "requests",
    "tokenizers",
    "tiktoken>=0.11.0", # tiktoken for efficient inference
    "kernels>=0.11.7",
    "psutil",
    "PyYAML",
    "marimo>=0.19.4",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "maturin>=1.9.4",
    "pytest>=8.0.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pilot", "nanochat"]

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rustbpe/Cargo.toml"

[tool.flwr.app]
publisher = "exalsius"

[tool.flwr.app.components]
serverapp = "pilot.server_app:app"
clientapp = "pilot.client_app:app"

[tool.flwr.app.config]
redis_url = "redis://localhost:6379"
round_min_duration = 600

# Nanochat Configuration (original nanochat d20 hyperparameters from karpathy/nanochat)
dataset_name = "karpathy/fineweb-edu-100b-shuffle"
num_shards = 240  # Number of parquet files to use (each ~53k rows)
matrix_lr = 0.02
embedding_lr = 0.3
unembedding_lr = 0.004
scalar_lr = 0.5
device_batch_size = 8
max_seq_len = 2048
total_batch_size = 524288
num_iterations = 23400

weight_decay = 0.2
grad_clip = 0.0
warmup_ratio = 0.0
warmdown_ratio = 0.4
final_lr_frac = 0.0
use_muon = true

adam_beta1 = 0.8
adam_beta2 = 0.95

# Model architecture (nanochat d20 defaults):
vocab_size = 65536
n_layer = 20
n_embd = 1280
n_head = 10
n_kv_head = 10

# Logging
log_interval = 1
wandb_project = "pilot_flwr"
# debug_port_server = 5681
# debug_port_client = 5682

# Povisioning
local_provisioning = true
# exls_cluster_id = "your-cluster-uuid"
mci_api_url = "http://localhost:8800"
clients = "client_0,client_1,client_2"
curtailment_threshold = 100

# Tokenizer
tokenizer_threads = 4
tokenizer_batch_size = 128


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 1

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 1
options.backend.client-resources.num-gpus = 1
options.backend.client-resources.num-cpus = 8

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.federations.exls-federation]
address = "XX.XX.XXX.XX:32248"
insecure = true
